--- a/src/app/acompanhar-eventos/acompanhar-eventos.component.html
+++ b/src/app/acompanhar-eventos/acompanhar-eventos.component.html
@@ -5,25 +5,66 @@
         <div class="card-body">
             <h4>Acompanhar eventos</h4>
 
-            <table class="table table-hover table-stripped">
-                <thead>
-                    <th>Evento</th>
-                    <th>Local</th>
-                    <th>Data</th>
-                    <th>Hora</th>
-                    <th>Detalhes</th>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Evento teste</td>
-                        <td>AQUI</td>
-                        <td>data</td>
-                        <td>hora</td>
-                        <td><i class="fas fa-paste"></i></td>
-                    </tr>
-                </tbody>
-            </table>
+            <div style="margin-top: 10px;" *ngIf="eventos.length == 0 && !showLoading" class="alert alert-warning"
+                role="alert">
+                Nenhum registro encontrado.
+            </div>
+            <div class="text-center" *ngIf="showLoading">
+                <div class="spinner-border" role="status">
+                    <span class="visually-hidden">Carregando...</span>
+                </div>
+            </div>
+            <div class="d-flex" *ngIf="eventos.length > 0">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th scope="col">Código</th>
+                            <th scope="col">Nome</th>
+                            <th scope="col">Data</th>
+                            <th scope="col">Hora</th>
+                            <th scope="col">Local</th>
+                            <th scope="col" style="text-align: center;">#</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let evento of eventos">
+                            <td> {{evento.id}} </td>
+                            <td> {{evento.nome}} </td>
+                            <td> {{evento.dataFormatada}}</td>
+                            <td> {{evento.hora}} </td>
+                            <td> {{evento.local.nome}} </td>
+                            <td style="text-align: center;">
+                                <a href="{{URL_RELATORIO}}?evento={{evento.id}}" target="_blank">
+                                    <i class="fas fa-print"></i>
+                                </a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <nav *ngIf="eventos.length > 0" aria-label="Page navigation example">
+                <ul class="pagination justify-content-end">
+                    <li class="page-item" [ngClass]="{disabled: pagina == 1}" (click)="getByPage(pagina-1)">
+                        <a class="page-link" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
 
+                    <li class="page-item"><a class="page-link" *ngIf="pagina > 1" (click)="getByPage(pagina-1)"> {{
+                            pagina - 1 }} </a></li>
+
+                    <li class="page-item active"><a class="page-link" (click)="getByPage(pagina)"> {{ pagina }}
+                        </a></li>
+
+                    <li class="page-item"><a class="page-link" *ngIf="proximo" (click)="getByPage(pagina+1)">
+                            {{ pagina + 1 }} </a></li>
+                    <li class="page-item" [ngClass]="{disabled: !proximo}" (click)="getByPage(pagina+1)">
+                        <a class="page-link" [ngClass]="{disabled: !proximo}">
+                            <span [ngClass]="{disabled: !proximo}">&raquo;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </div>
 </div>
